# openaction

./: .gitignore  Dockerfile  README.md  action_mcp_server.py  adapter_impl.py  code_repository.py  config.py  cron.py  cron_expression.py  cron_service.py  examples.txt  http_client.py  http_support.py  managed_task.py  managed_task_repository.py  mcp_adapter_impl.py  mcp_client.py  mcp_server.py  mcp_server_base.py  mcp_support.py  mdns.py  openaction.py  openaction_server.py  opendiscovery.py  opendiscovery_server.py  pyproject.toml  requirements.txt  run_openaction.py  run_server.py  run_server_bundle.py  service_registry.py  services.py  simple_environment.py  simple_store.py  store_impl.py  store_service.py  subscription.py  task.py  task_adapter.py  task_registry.py  (+2 more)
.github/workflows/: publish_to_dockerhub.yml  publish_to_pypi.yml
api/: adapter.py  environment.py  eventlog.py  http_adapter.py  http_service.py  mcp_adapter.py  mcp_service.py  store.py  store_service.py  subscription.py  task.py  webthing_adapter.py
articles/: FromSmartHomeToAgenticHome.md
articles/FromSmartHomeToAgenticHome/: FromSmartHomeToAgenticHome.md
examples/: background_office_shutter_sun_automation.py  http_energy_meter_reader.py  mcp_grid_power_logger.py  mcp_grid_power_stream.py  mcp_polling_office_shutter_schedule.py  mcp_push_grid_power_logger.py  mcp_rollershutter.py  mcp_switch_light.py  polling_based_office_shutter.py  shelly_pv_power.py  webthing_polling_based_office_shutter.py  webthing_rollershutter.py  webthing_windsensor_stream.py
