[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openaction"
version = "0.0.1"
description = "AI-driven framework for smart home automation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache License 2.0" }
authors = [
    { name = "OpenAction Contributors" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "requests>=2.31.0",
    "appdirs>=1.4.4",
    "mcp>=1.27.0",
    "zeroconf>=0.148.0"
]

[tool.setuptools]
packages = ["api"]
py-modules = [
    "cron",
    "http_client",
    "mcp_client",
    "openaction",
    "services",
    "store",
    "task",
    "task_repository"
]

