[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "openaction"
dynamic = ["version", "dependencies"]
description = "AI-driven framework for smart home automation"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Apache License 2.0" }
authors = [
    { name = "OpenAction Contributors" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
packages = ["api"]
py-modules = [
    "cron",
    "http_client",
    "mcp_client",
    "openaction",
    "services",
    "store",
    "task",
    "task_repository"
]

[tool.setuptools_scm]

